# atem

./: Cargo.toml  README.md
atem-client/: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
atem-client/src/: App.vue  main.ts
atem-client/src/api/: project.ts
atem-client/src/components/: Annotation.vue  Atem.vue  HelloWorld.vue  NewAnno.vue  NewDomain.vue  styles.ts
atem-client/src/stores/: counter.ts
render/: main.js  package-lock.json  package.json
render/static/: annotation.js  cheat.json  index.html  operation.js  style.css
src/: edc.rs  errors.rs  lib.rs  repository.rs  usecase.rs
src/edc/: ecollect.rs  item_type.rs  transport.rs
src/edc/ecollect/: elder.rs  schema.rs  transport.rs  v6.rs
src/edc/ecollect/elder/: column.rs  transport.rs
src/edc/ecollect/v6/: column.rs  schema.rs  transport.rs
src/entity/: annotation.rs
src/repository/: annotation.rs  dto.rs  metadata.rs  rawdata.rs
src/repository/dto/: annotation.rs  metadata.rs  rawdata.rs
tests/render/: annotation.js  data.js  data.json  operation.js  sample.html  style.css
